# Blockbit

./: .gitignore  .mcp.json  Blockbit  CMakeLists.txt  LICENSE  README.md  build-linux-g++.sh  build.bat  build.sh  cline_mcp_config.json  mcp_build_server.py  run-world.sh  run.sh
.VSCodeCounter/2026-03-07_16-10-35/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.copilot/: instructions.md
include/: Account.hpp  AccountWidget.hpp  AnimationComponent.hpp  AnimationSystem.hpp  AssetManager.hpp  Block.hpp  Button.hpp  Chunk.hpp  ChunkUnloadSystem.hpp  Command.hpp  ComponentType.hpp  Console.hpp  CreateWorldState.hpp  DeathScreenState.hpp  Entity.hpp  ExplosiveComponent.hpp  ExplosiveSystem.hpp  Game.hpp  GameState.hpp  HealthBar.hpp  HealthComponent.hpp  HealthSystem.hpp  Hotbar.hpp  InputField.hpp  InputManager.hpp  IntroGameState.hpp  InventoryComponent.hpp  InventorySystem.hpp  InventoryWidget.hpp  Item.hpp  ItemComponent.hpp  Label.hpp  MainGameState.hpp  MenuGameState.hpp  Particle.hpp  PauseScreenState.hpp  PerlinNoise.hpp  PhysicsComponent.hpp  PhysicsSystem.hpp  PlayerComponent.hpp  (+12 more)
inspector/: README.md  build.sh  inspector.cpp
skills/: blockbit-build.md  blockbit-test-world.md
src/: Account.cpp  AccountWidget.cpp  AnimationComponent.cpp  AnimationSystem.cpp  AssetManager.cpp  Block.cpp  Button.cpp  Chunk.cpp  ChunkUnloadSystem.cpp  Command.cpp  Console.cpp  CreateWorldState.cpp  DeathScreen.cpp  DeathScreenState.cpp  Entity.cpp  ExplosiveSystem.cpp  Game.cpp  GameState.cpp  HealthBar.cpp  HealthSystem.cpp  Hotbar.cpp  InputField.cpp  InputManager.cpp  IntroGameState.cpp  InventorySystem.cpp  InventoryWidget.cpp  Item.cpp  Label.cpp  MainGameState.cpp  MenuGameState.cpp  PauseScreenState.cpp  PhysicsSystem.cpp  PlayerInputSystem.cpp  RenderSystem.cpp  Slot.cpp  TransformComponent.cpp  TransformSystem.cpp  UIElement.cpp  World.cpp  WorldInputStream.cpp  (+3 more)
(+17 files in other folders)
